# maudtools

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
legacy/: analysis.py  generate_inits.py  generate_prior_template.py  plot_oos.py  plot_samples.py  readme.md  simulation_study.py  simulation_study_output.py  test_plotting.py  user_templates.py
maudtools/: __init__.py  cli.py  fetching_dgf_priors.py  generate_inits.py  generating_inits.py  generating_priors.py  generating_sbml.py  generating_yaml.py  plotting.py
maudtools/data/: expected_dgf_priors_methionine.toml  idata_methionine.json
tests/: __init__.py  test_maudtools.py
tests/data/input_G6PtoPEP/: G6PtoPEP.toml  G6PtoPEP_experiments.csv  G6PtoPEP_priors.csv  biological_context.toml  config.toml  dgf_prior_cov_equilibrator.csv  dgf_prior_mean_equilibrator.csv
tests/data/methionine_output/: ch0-dr0-wuFalse-exdataset1.sbml  ch0-dr0-wuFalse-exdataset1.yml  generated_inits.csv  idata.nc
tests/data/methionine_output/samples/: input_data_test.json  model-20220714151618.csv  model-20220714151618_0-stdout.txt
tests/test_unit/: test_fetching_dgf_priors.py  test_generate_inits.py  test_generating_inits.py  test_generating_sbml.py  test_plotting_variables.py
