[build-system]
requires = [
  'setuptools>=40.6.0',
  'wheel'
]

[tool.black]
line-length = 88
python-version = ['py38', 'py39', 'py310']
exclude = '''
(
    __init__.py
    | _version.py
)
'''

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
disableOrganizeImports = false
useLibraryCodeForTypes = true
venv_path ="~/.venvs"
venv = "maudtools"
pythonPlatform = "Darwin"
