[metadata]
name= maudtools
author = Novo Nordisk Foundation Center for Biosustainability, Technical University of Denmark
author_email = tedgro@biosustain.dtu.dk
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = Tools for working with Maud
long_description = file: README.rst
license = GNU General Public License v3
keywords = maudtools

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
tests_require =
    tox
install_requires =
    click >= 7.0
    equilibrator_api
    equilibrator_cache
    maud@git+https://github.com/biosustain/Maud.git@master
packages = find:

[options.entry_points]
console_scripts =
    maudtools = maudtools.cli:cli

[options.packages.find]
where = maudtools

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:maudtools/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
[tool:pytest]
collect_ignore = ['setup.py']