[metadata]
name= maudtools
author = Novo Nordisk Foundation Center for Biosustainability, Technical University of Denmark
author_email = tedgro@biosustain.dtu.dk
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = Tools for working with Maud
long_description = file: README.rst
license = GNU General Public License v3
keywords = maudtools

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
tests_require =
    tox
install_requires =
    python-libsbml >= 5.19.7
    click >= 7.0
    equilibrator-api==0.4.5.1
    equilibrator-cache==0.4.3
    component-contribution==0.4.4
    maud-metabolic-models>=0.4.0
    arviz==0.12.1
    plotnine>=0.10.1
    numpy==1.23.1
    pandas==1.4.3
packages = find:

[options.entry_points]
console_scripts =
    maudtools = maudtools.cli:cli

[options.extras_require]
development =
    flake8
    tox
    pytest

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:maudtools/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude =
    docs
    __init__.py
max-line-length = 89
[tool:pytest]
collect_ignore = ['setup.py']
